# ChuviscoBot

./: .gitignore  logging.conf  logging.json  pyproject.toml  ruff.toml  start.py
.github/workflows/: main_workflow.yml
chuvisco/: db.py  hackear_algo.txt  main.py
tests/: __init__.py
tests/unit/: basic_test.py  conftest.py  db_test.py  save_test.py
