[tool.poetry]
name = "chuviscobot"
version = "0.1.0"
description = "Bot de Telegram para os grupos oficiais do Garoa Hacker Clube"
authors = ['Felipe "Juca" Sanches', "Luciana Marques", "Priscilla Gutierres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
